# espert-sandbox

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  MyGameObject.hh  MyRenderSystem.hh  README.md  main.cc  unix-configure.sh  windows-configure.bat
.github/workflows/: clang-format-check.yml
Layers/: CubeExampleLayer.hh
resources/AdvanceModels/: README.md
resources/AdvanceModels/HipHopDancer/: Hip_Hop_Dancing.dae
resources/Models/backpack/: backpack.mtl
resources/Shaders/AdvanceRendering2/: README.md
resources/Shaders/AnimatedModel/: shader.frag  shader.vert
resources/Shaders/Example/: shader.frag  shader.vert
resources/Shaders/InstancingExample/: shader.frag
resources/Shaders/LoadAdvanceModel/: shader.frag  shader.vert
resources/Shaders/ModelExample/: shader.vert
resources/Shaders/ObjModelExample/: shader.frag  shader.vert
resources/Shaders/OffscreenRnd/: shader.frag  shader.vert  shader_on.frag
resources/Shaders/PBRBaseExample/: shader_f.frag  shader_f.vert
resources/Shaders/PBRTextureExample/: shader_p1.frag  shader_p1.vert  shader_p2.frag  shader_p2.vert
resources/Shaders/SkyBoxExample/: shader_f.frag  shader_f.vert  skybox.frag  skybox.vert
resources/Shaders/SphereExample/: shader_p1.frag  shader_p1.vert
resources/Shaders/TextureDepthExample/: shader.frag  shader.vert
resources/Shaders/TextureExample/: shader.frag
resources/Textures/HDRRosendalMountainSkybox/: mount_back.hdr  mount_bottom.hdr  mount_front.hdr  mount_left.hdr  mount_right.hdr  mount_top.hdr
resources/Textures/HDRSkybox/: room_back.hdr  room_bottom.hdr  room_front.hdr  room_left.hdr  room_right.hdr  room_top.hdr
scripts/: code-format.py  common.py  espert-sandbox.py
shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
shaders/Example/: shader.vert
shaders/InstancingExample/: shader.vert
shaders/TextureDepthExample/: shader.frag
src/: MyGameObject.hh  main.cc
src/Examples/: ExampleLayer.hh  Examples.hh  InstancingExampleLayer.hh  OffscreenRenderingLayer.hh  SkyBoxLayer.hh  TextureDepthExampleLayer.hh  TextureExampleLayer.hh
src/Examples/AdvanceModel/: AdvanceModelLayer.hh  AnimatedModelLayer.hh
src/Examples/AdvanceRendering/: PBRBaseLayer.hh  PBRTextureLayer.hh  PBRUtils.hh  PBRbaseLayer.hh  PBRbaseLayer2.hh
src/Examples/AdvanceRendering2/: PBR2Utils.hh  PBRBasicLayer.hh  PBRTexturedLayer.hh  PBRiblLayer.hh
src/Examples/ModelExample/: ModelExampleLayer.hh  ModelExampleUtils.hh  ModelExampleWithInstancingLayer.hh  ModelExampleWithoutInstancingLayer.hh
src/Examples/ObjExample/: BackpackObjModelExampleLayer.hh  VikingRoomObjModelExampleLayer.hh
src/Layers/: CubeExampleLayer.hh  ExampleInstancingLayer.hh  ExampleLayer.hh  GuiLayer.hh  InputLayer.cc  InputLayer.hh  InstancingExampleLayer.hh  Layers.hh  ModelExampleLayer.hh  ObjModelExampleLayer.hh  OffscreenRenderingLayer.hh  TextureDepthExampleLayer.hh  TextureExampleLayer.hh
src/Layers/Gui/: GuiEvent.hh  GuiLayer.hh  GuiParam.hh
src/Layers/ModelExample/: ModelExampleLayer.hh  ModelExampleUtils.hh  ModelExampleWithInstancingLayer.hh  ModelExampleWithoutInstancingLayer.hh
src/Layers/ObjExample/: BackpackObjModelExampleLayer.hh  VikingRoomObjModelExampleLayer.hh
src/MG1/: CadCamLayer.cc  CadCamLayer.hh  CursorLayer.cc  CursorLayer.hh  ObjectLayer.cc  ObjectLayer.hh  TorusLayer.cc  TorusLayer.hh  TorusUtils.hh  Utils.hh
src/MG1/Common/: CursorInit.hh  InitInfo.hh  ObjectInfo.hh  TorusInit.hh
src/MG1/Components/: Components.hh  CursorComponent.cc  (+7 more)
(+97 files in other folders)
